<resources>
    <string name="app_name">SSH</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_passsowrd">Enter password</string>
    <string name="enter">Enter</string>
    <string name="hello_world">hello_world</string>
    <string name="ssh">Students Success Hub</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login_page">Your Title Here</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="upload">upload</string>
    <string name="upload_new_file">Upload new file</string>
    <string name="skip_login">Skip login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="view_files">view files</string>
    <string name="search">Search</string>
    <string name="search_file">search file</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="already_registered_login_here">Already registered? Login here</string>
</resources>